# hawxide

./: .gitignore  Cargo.toml  README.md
src/: aabb.rs  aarect.rs  boxx.rs  bvh.rs  camera.rs  constant_medium.rs  cylinder.rs  disk.rs  hit.rs  hittable_list.rs  lib.rs  main.rs  material.rs  moving_sphere.rs  obj.rs  onb.rs  pdf.rs  perlin.rs  ray.rs  scene.rs  sphere.rs  texture.rs  triangle.rs  triangle_mesh.rs  util.rs  vec3.rs
