[package]
name = "hawxide"
version = "0.1.0"
authors = ["Oren Leiman <oleiman3@gatech.edu>"]
license = "GPL-3.0"
description = "A command-line ray tracer based on https://raytracing.github.io/"
readme = "README.md"
homepage = "https://github.com/oleiman/hawxide"
repository = "https://github.com/oleiman/hawxide"
keywords = ["cli", "ray", "trace", "path", "weekend"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
derive = "1.0.0"
image = "0.24.6"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
tobj = { version = "4.0.0", features = ["use_f64"] }
